adds status_reduced to cctxInfo
